@@ -1,3 +1,8 @@
+2008-07-18  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/TextViewMargin.cs: Fixed visual --> document location
+	  bug in lines with open foldings.
+
 2008-07-15  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed "Bug 408896
